No longer use ellipsis for overflow in scope side pane
This fixes an issue where custom formatted output that is too long
to completely fit into the side pane will not be displayed at all.

R=bmeurer@chromium.org

Fixed: 1004070
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3306496
Commit-Queue: Yang Guo <yangguo@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Yang Guo <yangguo@chromium.org>

--- a/front_end/ui/legacy/components/object_ui/objectPropertiesSection.css
+++ b/front_end/ui/legacy/components/object_ui/objectPropertiesSection.css
@@ -61,7 +61,6 @@
 
 .name-and-value {
   overflow: hidden;
-  text-overflow: ellipsis;
   line-height: 16px;
 }
 
